infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stubhub-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stubhub-expiration
  template:
    metadata:
      labels:
        app: stubhub-expiration
    spec:
      containers:
        - name: expiration
          image: maanasdevelopment/stubhub-expiration
