infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stubhub-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stubhub-orders
  template:
    metadata:
      labels:
        app: stubhub-orders
    spec:
      containers:
        - name: orders
          image: maanasdevelopment/stubhub-orders
---
apiVersion: v1
kind: Service
metadata:
  name: stubhub-orders-clusterip-srv
spec:
  selector:
    app: stubhub-orders
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
