infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stubhub-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stubhub-tickets
  template:
    metadata:
      labels:
        app: stubhub-tickets
    spec:
      containers:
        - name: tickets
          image: maanasdevelopment/stubhub-tickets
---
apiVersion: v1
kind: Service
metadata:
  name: stubhub-tickets-clusterip-srv
spec:
  selector:
    app: stubhub-tickets
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
